--- a/index.html
+++ b/index.html
@@ -84,16 +84,19 @@
     <p style="font-size:0.9em;">👉 Tap anywhere to play our song 🎶</p>
 
     <!-- MUSIC -->
-    <audio id="music" loop>
-      <source src="song.mp3" type="audio/mpeg">
-    </audio>
-  </div>
+    <!-- MUSIC -->
+<audio id="music" preload="auto">
+  <source src="./song.mp3" type="audio/mpeg">
+</audio>
 
-  <script>
-    document.body.addEventListener("click", function () {
-      document.getElementById("music").play();
-    }, { once: true });
-  </script>
+<script>
+  document.addEventListener("click", function () {
+    const music = document.getElementById("music");
+    music.volume = 0.7;
+    music.play().catch(err => console.log(err));
+  }, { once: true });
+</script>
+
 
 </body>
 </html>
